# AEL_ERP

./: .dockerignore  .env.example  .gitignore  Dockerfile  GOOGLE_DRIVE_SETUP.md  README.md  config.py  main.py  navigation.py  pyproject.toml  test_google_drive_integration.py  test_google_drive_service.py
.streamlit/: config.toml
data/: MANAGEMENT REPORT.xlsx
pages/: automation.py  data_entry.py  home.py  job_work.py  raw_material_inward_issue.py  raw_material_used.py  slitting_plan.py
scripts/: migration_script.py
src/data_entry/models/: __init__.py  rm_inward_models.py  rm_used_models.py
src/data_entry/service/: __init__.py  rm_inward_service.py  rm_used_service.py  test_rm_inward_service.py
src/job_work/service/: job_work_service.py
src/shared/integrations/: __init__.py  google_drive_service.py  test_google_drive_service.py
src/shared/utils/: logger_config.py
src/slitting_plan/service/: slitting_plan_service.py
theme/: __init__.py  components.py  styles.css
