[project]
name = "ael-erp"
version = "0.1.0"
description = "AEL ERP System - Enterprise Resource Planning Application"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core Streamlit - Latest stable version
    "streamlit==1.48.0",
    "pyarrow==15.0.0",
    
    # Configuration and Environment
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    
    # Data Processing
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "numpy==1.26.4",
    
    # Utilities
    "python-multipart==0.0.12",
    "jinja2==3.1.4",
    "requests==2.32.3",
    "urllib3==2.2.3",
    "streamlit-msal",
    "gspread",
    "google-auth-oauthlib",
    "altair==5.3.0",
    "reportlab==4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
]

database = [
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.36",
]

security = [
    "cryptography==44.0.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "email-validator==2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
